# gpsoauth-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: Config.cmake.in  HunterGate.cmake  UpdateTestConfig.cmake
include/GPSOAuth/: GoogleKeyUtils.h  StringMap.h
include/gpsoauth/: GPSOAuthClient.h  GoogleKeyUtils.h
src/: CMakeLists.txt  GPSOAuthClient.cpp  GoogleKeyUtils.cpp
test/: CMakeLists.txt  Tests.cpp  TestsMain.cpp  config.h.in  config.yml
